update nvim config and flav

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -13,6 +13,10 @@ bind v split-window -h
 # unbind '"'
 # bind - split-window -v
 
+# In .tmux.conf
+# run-shell "bash ~/.tmux/flavour.sh"
+
+
 unbind r
 bind r source-file ~/.tmux.conf
 
@@ -42,6 +46,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' #auto saves sessions every 15 min
 
+# Dont think this actually does anything
 set -g @themepack 'powerline/default/cyan'
 
 set -g @resurrect-capture-pane-contents 'on'
