--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,24 +1,28 @@
+# Start window and pane numbering from 1 for easier switching
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+# Set pane name to current working directory
+set-option -g status-interval 1
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
+# Renumber windows when one is removed.
+set -g renumber-windows on
+
+# Improve colors
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',*256col*:Tc'
 
+# Allow the mouse to resize windows and select tabs
 set -g mouse on
 
+# Use Ctrl+A for prefix instead of Ctrl+B
 set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
 
-unbind %
-bind v split-window -h
-
-# unbind '"'
-# bind - split-window -v
-
-# In .tmux.conf
-# run-shell "bash ~/.tmux/flavour.sh"
-
-
+# 'PREFIX r' to reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf\; display-message '~/.tmux.conf reloaded'
 
 # resize-pane
 bind -r j resize-pane -D 5
@@ -27,30 +31,49 @@ bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
-# forget the find window.  That is for chumps
-bind-key -r f run-shell "tmux neww ~/.local/bin/scripts/tmux-sessionizer"
-
+# Address vim mode switching delay (http://superuser.com/a/252717/65504)
 set-option -sg escape-time 10
 
-# Set vim keys
-set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-unbind -T copy-mode-vi MouseDragEnd1Pane
+# Theme
+set -g pane-border-style fg='#757581'
+set -g pane-active-border-style fg='#696F8A'
+set -g message-style bg='default',fg='#8be9fd'
+set -g status-style bg='default',fg='#696F8A'
+set -g window-status-format "#{window_index}:#{window_name}#{window_flags} "
+set -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
+set -g window-status-current-style "fg=#8be9fd bg=default"
+set -g window-status-activity-style none
+set -g status-interval 1
+set -g status-left-length 30
+set -g status-right-length 100
+set -g status-left " #{session_name}  "
 
+set -g status-right '#[fg=#8be9fd,bg=default] #(gitmux "#{pane_current_path}") ' 
+set -ga status-right '#[fg=#ff79c6,bg=default] #(tmux-mem-cpu-load -g 5 --interval 2) '
+set -ga status-right '#[fg=#bd93f9,bg=default] %a %H:%M:%S'
+
+### copy & paste -------------------------------------------------------
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' #auto saves sessions every 15 min
 
-# Dont think this actually does anything
-set -g @themepack 'powerline/default/cyan'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
 # initialize plugin manager
 run '~/.tmux/plugins/tpm/tpm'
+
