--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -35,22 +35,22 @@ bind -r m resize-pane -Z
 set-option -sg escape-time 10
 
 # Theme
-set -g pane-border-style fg='#757581'
-set -g pane-active-border-style fg='#696F8A'
-set -g message-style bg='default',fg='#8be9fd'
-set -g status-style bg='default',fg='#696F8A'
+# set -g pane-border-style fg='#757581'
+# set -g pane-active-border-style fg='#696F8A'
+# set -g message-style bg='default',fg='#8be9fd'
+# set -g status-style bg='default',fg='#696F8A'
 set -g window-status-format "#{window_index}:#{window_name}#{window_flags} "
 set -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
-set -g window-status-current-style "fg=#8be9fd bg=default"
+# set -g window-status-current-style "fg=#8be9fd bg=default"
 set -g window-status-activity-style none
 set -g status-interval 1
 set -g status-left-length 30
 set -g status-right-length 100
 set -g status-left " #{session_name}  "
 
-set -g status-right '#[fg=#8be9fd,bg=default] #(gitmux "#{pane_current_path}") ' 
-set -ga status-right '#[fg=#ff79c6,bg=default] #(tmux-mem-cpu-load -g 5 --interval 2) '
-set -ga status-right '#[fg=#bd93f9,bg=default] %a %H:%M:%S'
+# set -g status-right '#[fg=#8be9fd,bg=default] #(gitmux "#{pane_current_path}") ' 
+# set -ga status-right '#[fg=#ff79c6,bg=default] #(tmux-mem-cpu-load -g 5 --interval 2) '
+# set -ga status-right '#[fg=#bd93f9,bg=default] %a %H:%M:%S'
 
 ### copy & paste -------------------------------------------------------
 # Use vim keybindings in copy mode
