--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -24,6 +24,9 @@ set -g prefix C-a
 unbind r
 bind r source-file ~/.tmux.conf\; display-message '~/.tmux.conf reloaded'
 
+
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+
 # resize-pane
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
@@ -62,6 +65,10 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namesp
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
+source-file ~/.tmux/flavour.sh
+
+
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -71,7 +78,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after compu
 set -g @plugin 'tmux-plugins/tmux-continuum' #auto saves sessions every 15 min
 
 
-set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-capture-pane-contents 'off'
 set -g @continuum-restore 'on'
 
 # initialize plugin manager
