--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -1,77 +1,56 @@
-# Start window and pane numbering from 1 for easier switching
-set -g base-index 1
-set-window-option -g pane-base-index 1
-
-# Set pane name to current working directory
-set-option -g status-interval 1
-set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_current_path}'
-
-# Renumber windows when one is removed.
-set -g renumber-windows on
-
-# Improve colors
-set -g default-terminal "screen-256color"
+source-file ~/.tmux/tmux.reset.conf
+set-option -g default-terminal 'screen-256color'
 set-option -ga terminal-overrides ',*256col*:Tc'
 
-# Allow the mouse to resize windows and select tabs
-set -g mouse on
-
-# Use Ctrl+A for prefix instead of Ctrl+B
-set -g prefix C-a
-
-# 'PREFIX r' to reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf\; display-message '~/.tmux.conf reloaded'
-
+set -g prefix C-a                # Use Ctrl+A for prefix instead of Ctrl+B
+set -g escape-time 0             # zero-out escape time delay
+# set-option -sg escape-time 10
+set -g history-limit 1000000     # increase history size (from 2000)
+set -g set-clipboard on          # use system clipboard
+set -g renumber-windows on       # renumber windows when a window is closed
+set -g default-terminal "${TERM}"
+setw -g mode-keys vi
+set -g mouse on                  # Allow the mouse to resize windows and select tabs
 
 bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 
-# resize-pane
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
-bind -r m resize-pane -Z
-
-# Address vim mode switching delay (http://superuser.com/a/252717/65504)
-set-option -sg escape-time 10
-
-# Theme
-set -g window-status-format "#{window_index}:#{window_name}#{window_flags} "
-set -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
-set -g window-status-activity-style none
-set -g status-interval 1
-set -g status-left-length 30
-set -g status-right-length 100
-set -g status-left " #{session_name}  "
-
-
-### copy & paste -------------------------------------------------------
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
-# Setup 'v' to begin selection as in Vim
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-
-
-source-file ~/.tmux/flavour.sh
+set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
+set -g @fzf-url-history-limit '2000'
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect' 
 set -g @plugin 'tmux-plugins/tmux-continuum' 
+set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
 
+set -g @continuum-restore 'off'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
 
-set -g @resurrect-capture-pane-contents 'off'
-set -g @continuum-restore 'on'
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_middle_separator "  █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#{pane_current_path}"
+
+set -g @catppuccin_status_modules_right "session application directory date_time"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
+set -g @catppuccin_date_time_text "%Y-%d-%m %H:%M:%S"
 
 # initialize plugin manager
-run '~/.tmux/plugins/tpm/tpm'
-
+run -b '~/.tmux/plugins/tpm/tpm'
