--- a/.config/nvim/.luarc.json
+++ b/.config/nvim/.luarc.json
@@ -1,7 +1,3 @@
 {
-    "workspace.checkThirdParty": false,
-    "diagnostics.globals": [
-        "vim",
-        "Util"
-    ]
+    "workspace.checkThirdParty": false
 }
