--- a/.tmux/.tmux_dark.conf
+++ b/.tmux/.tmux_dark.conf
@@ -1,11 +1,1 @@
-set -g pane-border-style fg='#757581'
-set -g pane-active-border-style fg='#696F8A'
-set -g message-style bg='default',fg='#8be9fd'
-set -g status-style bg='default',fg='#696F8A'
-set -g window-status-current-style "fg=#8be9fd bg=default"
-
-set -ga status-right '#[fg=#ff79c6,bg=default] #(tmux-mem-cpu-load -g 5 --interval 2) '
-set -ga status-right '#[fg=#bd93f9,bg=default] %a %H:%M:%S'
-
-
-
+set -g @catppuccin_flavour 'macchiato'
