--- a/.tmux/tmux.reset.conf
+++ b/.tmux/tmux.reset.conf
@@ -10,7 +10,7 @@ bind H previous-window
 bind L next-window
 
 bind r command-prompt "rename-window %%"
-bind R source-file ~/.config/tmux/tmux.conf
+bind R source-file ~/.tmux.conf; display-message '~/.tmux.conf reloaded'
 bind ^A last-window
 bind ^W list-windows
 bind w list-windows
@@ -25,11 +25,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind -r -T prefix , resize-pane -L 20
-bind -r -T prefix . resize-pane -R 20
-bind -r -T prefix - resize-pane -D 7
-bind -r -T prefix = resize-pane -U 7
-bind : command-prompt
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
 bind * setw synchronize-panes
 bind P set pane-border-status
 bind c kill-pane
